--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
     "@angular/router": "^14.2.0",
     "@ng-bootstrap/ng-bootstrap": "^13.1.0",
     "@popperjs/core": "^2.10.2",
+    "body-parser": "^1.20.1",
     "bootstrap": "^5.2.2",
     "bootstrap-icons": "^1.9.1",
+    "express": "^4.18.2",
+    "mongoose": "^6.7.2",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
